--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="content">
       <h1>Oplev Myanmars (Burma) enestående kultur</h1>
       <h4>Rejseguide, 7. januar 2018</h4>
-      <img src="images/landskab-myanmar.jpg" class="img" alt="Beplantning">
+      <img src="images/agriculture.jpg" class="img" alt="Beplantning">
       <br>
       <h2>Rejser til Myanmar er noget for dig</h2>
     <p>Holder du af unaturligt smuk natur, bjerge, søer, rismarker, floder - og en befolkning af forunderlig elegance og mildhed, er rejser til Myanmar noget for dig. Horisonts rejser til Myanmar byder på det hele og er blandt vores gæsters absolutte favoritter.</p><br>
